--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -1,12 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Punchtop</title>
     <style>
-      html, body, #app, #app>div {
+      html,
+      body,
+      #app {
         height: 100vh;
         width: 100vw;
         margin: 0;
