Hydrate redux punchtop state from a global
This will enable injecting state from rust

--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -32,6 +32,47 @@
         transition: height 150s ease-in-out;
       }
     </style>
+    <script>
+      window.PUNCHTOP = {
+        media: {
+          es0r5Icy: {
+            artist: "Dillon Francis",
+            title: "When We Were Young",
+            cover: {
+              height: 600,
+              width: 600,
+              url: "http://0.0.0.0:8000/es0r5Icy.jpg"
+            }
+          },
+          "4FpLLFTy": {
+            artist: "Tame Impala",
+            cover: {
+              height: 600,
+              width: 600,
+              url: "http://0.0.0.0:8000/4FpLLFTy.jpg"
+            }
+          },
+          "": {
+            cover: {
+              height: 160,
+              width: 160,
+              url: "http://0.0.0.0:8000/musical-note_1f3b5.png"
+            }
+          }
+        },
+        config: {
+          duration: 20,
+          source: {
+            name: "test"
+          }
+        },
+        player: {
+          current: "",
+          elapsed: 13.2,
+          isPlaying: false
+        }
+      };
+    </script>
   </head>
   <body>
     <div id="app"></div>
