split idle player component from active

--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -51,20 +51,11 @@
               width: 600,
               url: "http://0.0.0.0:8000/4FpLLFTy.jpg"
             }
-          },
-          "": {
-            cover: {
-              height: 160,
-              width: 160,
-              url: "http://0.0.0.0:8000/musical-note_1f3b5.png"
-            }
           }
         },
         config: {
           duration: 20,
-          source: {
-            name: "test"
-          }
+          source: null,
         },
         player: {
           current: "",
