Add play/pause control to web ui

--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -47,6 +47,8 @@
           isPlaying: false
         }
       };
+      window.external = window.external || {};
+      window.external.invoke = window.external.invoke || function() {};
     </script>
   </head>
   <body>
