Add a material ui device drawer

--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -45,6 +45,15 @@
         player: {
           elapsed: 0.0,
           isPlaying: false
+        },
+        device: {
+          active: {},
+          all: [
+            {kind: "cast", name: "TV"},
+            {kind: "local", name: "quadbox"},
+            {kind: "cast", name: "Kitchen Home"},
+            {kind: "cast", name: "Soundbar"},
+          ]
         }
       };
       window.external = window.external || {};
