--- a/web-ui/src/index.html
+++ b/web-ui/src/index.html
@@ -5,57 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Punchtop</title>
-    <style>
-      html,
-      body,
-      #app {
-        min-height: 100%;
-        width: 100vw;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      .cross-fade-leave {
-        opacity: 1;
-      }
-      .cross-fade-leave.cross-fade-leave-active {
-        opacity: 0;
-        transition: opacity 300ms ease-in-out;
-      }
-      .cross-fade-enter {
-        opacity: 0;
-      }
-      .cross-fade-enter.cross-fade-enter-active {
-        opacity: 1;
-        transition: opacity 300ms ease-in-out;
-      }
-      .cross-fade-height {
-        transition: height 150s ease-in-out;
-      }
-    </style>
     <script>
-      window.PUNCHTOP = {
-        media: {
-          current: null
-        },
-        config: {
-          duration: 60,
-          source: null
-        },
-        player: {
-          elapsed: 0.0,
-          isPlaying: false
-        },
-        device: {
-          active: {},
-          all: [
-            {kind: "cast", name: "TV"},
-            {kind: "local", name: "quadbox"},
-            {kind: "cast", name: "Kitchen Home"},
-            {kind: "cast", name: "Soundbar"},
-          ]
-        }
-      };
+      // Stub webview `invoke` calls for local development
       window.external = window.external || {};
       window.external.invoke = window.external.invoke || function() {};
     </script>
